added IQ tester project to portfolio

--- a/index.html
+++ b/index.html
@@ -137,6 +137,19 @@
             <h2 class="section-title">Portfolio</h2>
             <p class="section-subtitle">A collection of projects I've worked on</p>
             <div class="portfolio-grid">
+                <a href="projects/q-learning-iq-tester.html" class="portfolio-item portfolio-link">
+                    <div class="portfolio-image">
+                        <div class="image-placeholder">Q-Learning IQ Tester</div>
+                    </div>
+                    <div class="portfolio-content">
+                        <h3>Q-Learning IQ Tester</h3>
+                        <p>I couldn't consistently beat the Original IQ Tester puzzle myself—so I built a Q-learning agent to see if it could do better. Custom environment, reward shaping, symmetry-based training, and a Tkinter GUI to watch the agent play.</p>
+                        <div class="portfolio-links">
+                            <span class="link" style="color: var(--text-secondary);">Fall 2025</span>
+                        </div>
+                        <p style="margin-top: 0.5rem; font-size: 0.875rem; color: var(--text-secondary);"><strong>Tech:</strong> Python, NumPy, Q-Learning, Tkinter</p>
+                    </div>
+                </a>
                 <a href="projects/lets-train.html" class="portfolio-item portfolio-link">
                     <div class="portfolio-image">
                         <div class="image-placeholder">Let's Train</div>
