refined passion xi project page +added a few images

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="hero-image">
                 <div class="profile-placeholder">
                     <!-- Add your profile image here -->
-                    <img src="profile.jpeg" alt="Profile Image" >
+                    <img src="assets/images/profile.jpeg" alt="Profile Image" >
                     <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
                         <circle cx="100" cy="100" r="80" fill="#e0e0e0"/>
                         <circle cx="100" cy="80" r="30" fill="#999"/>
@@ -139,7 +139,7 @@
             <div class="portfolio-grid">
                 <a href="projects/q-learning-iq-tester.html" class="portfolio-item portfolio-link">
                     <div class="portfolio-image">
-                        <div class="image-placeholder">Q-Learning IQ Tester</div>
+                        <img src="assets/images/project_IQ_tester_profilepic.png" alt="Q-Learning IQ Tester project cover image">
                     </div>
                     <div class="portfolio-content">
                         <h3>Q-Learning IQ Tester</h3>
@@ -191,11 +191,11 @@
                 </a>
                 <a href="projects/passion-xi.html" class="portfolio-item portfolio-link">
                     <div class="portfolio-image">
-                        <div class="image-placeholder">Passion XI</div>
+                        <img src="assets/images/project_PassionXI_profilepicv2.png" alt="Passion XI project cover image">
                     </div>
                     <div class="portfolio-content">
                         <h3>Passion XI</h3>
-                        <p>Built a modern foundation for a new, up-and-coming local soccer team. Developed the website front-end with self-taught HTML, CSS, and JavaScript. Created marketing and branding strategy, designed and organized social media posts.</p>
+                        <p>My personal team—I built the website, branding, and socials myself to get hands-on experience while playing and having fun with my friends.</p>
                         <div class="portfolio-links">
                             <span class="link" style="color: var(--text-secondary);">Personal Project</span>
                         </div>
