--- a/projects/passion-xi.html
+++ b/projects/passion-xi.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Passion XI - Local soccer team website">
+    <meta name="description" content="Passion XI - My personal soccer team; website and branding built from scratch for experience and fun">
     <title>Passion XI | Philip Papadatos</title>
     <script>
       (function() {
@@ -52,12 +52,16 @@
             <h1 class="project-title">Passion XI</h1>
             <div class="project-meta">
                 <span class="project-status status-complete">Complete</span>
-                <a href="#" class="project-github" target="_blank" rel="noopener noreferrer">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg>
-                    View on GitHub
+                <a href="https://github.com/philipaaa/philipaaa.github.io" class="project-github" target="_blank" rel="noopener noreferrer">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="currentColor"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg>
+                    Repository
+                </a>
+                <a href="https://www.instagram.com/passionxi/" class="project-github" target="_blank" rel="noopener noreferrer">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"/><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"/><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"/></svg>
+                    @passionxi
                 </a>
             </div>
-            <p class="project-summary">A modern website and branding for a new local soccer team. I built the front-end with self-taught HTML, CSS, and JavaScript, and developed the marketing and social media strategy—including designing and organizing posts with Canva.</p>
+            <p class="project-summary">Passion XI is my personal team—I did everything myself: the website, the branding, and the social media. I wanted hands-on experience in those areas while playing and having fun with my friends.</p>
             <div class="project-skills">
                 <h3>Skills & technologies</h3>
                 <div class="skills-grid">
@@ -71,17 +75,34 @@
 
         <section class="project-section">
             <h3>Inspiration</h3>
-            <p>I wanted to help a new, up-and-coming local soccer team get a professional online presence. They needed a simple site and consistent branding so they could attract players and share news—without a big budget. It was a chance to practice front-end skills and learn about marketing and design in a real context.</p>
+            <p>I wanted to play with my friends and have a real team presence—a place to share our games, highlights, and the vibe. So I started Passion XI and decided to build the whole thing myself: the site, the look, and the socials. It was a way to get real experience in web dev, design, and marketing while doing something I enjoy.</p>
         </section>
 
         <section class="project-section">
             <h3>Approach</h3>
-            <p>I designed and built the website from scratch using HTML, CSS, and JavaScript, focusing on a clean layout and mobile-friendly design. I also created a branding and marketing plan: tone of voice, visual style, and a content calendar. Using Canva, I designed social media graphics and captions so the team could post consistently. The goal was to deliver something they could use and update without needing a developer on retainer.</p>
+            <p>I did it all solo. I built the website from scratch with HTML, CSS, and JavaScript—clean, simple, and mobile-friendly. I defined the branding and visual style, set up the Instagram, and used Canva to design graphics and plan posts. No client brief, no budget—just me learning by doing and having fun with the team.</p>
         </section>
 
         <section class="project-section">
             <h3>Takeaways</h3>
-            <p>Owning the full process—code, design, and strategy—and working with a real client (the team) to define scope and iterate on feedback.</p>
+            <p>Wearing every hat—developer, designer, and “marketing”—on my own project taught me a lot. Best part: getting that experience while playing and building something with my friends.</p>
+        </section>
+
+        <section class="project-section project-instagram-section">
+            <h3>Follow Passion XI</h3>
+            <a href="https://www.instagram.com/passionxi/" class="project-instagram-card" target="_blank" rel="noopener noreferrer">
+                <span class="project-instagram-icon" aria-hidden="true">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"/><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"/><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"/></svg>
+                </span>
+                <div class="project-instagram-text">
+                    <strong>@passionxi</strong>
+                    <span>Follow our team on Instagram for updates, highlights, and behind-the-scenes.</span>
+                </div>
+                <span class="project-instagram-arrow" aria-hidden="true">→</span>
+            </a>
+            <div class="project-instagram-embed-wrap">
+                <iframe class="project-instagram-embed" src="https://www.instagram.com/p/Cqj4z8CMXQa/embed/" allowfullscreen scrolling="no" allowtransparency="true" loading="lazy" title="Instagram post from @passionxi"></iframe>
+            </div>
         </section>
     </main>
 
