--- a/projects/q-learning-iq-tester.html
+++ b/projects/q-learning-iq-tester.html
@@ -75,7 +75,7 @@
         <section class="project-section">
             <h3>The puzzle</h3>
             <figure class="project-figure">
-                <img src="iq-tester-board.png" alt="The Original I.Q. Tester Deluxe Edition game board — triangular peg layout with 14 pegs and one empty hole." width="600">
+                <img src="../assets/images/iq-tester-board.png" alt="The Original I.Q. Tester Deluxe Edition game board — triangular peg layout with 14 pegs and one empty hole." width="600">
                 <figcaption>The Original I.Q. Tester — 14 pegs, one empty hole. Jump pegs over each other; goal is to leave only one.</figcaption>
             </figure>
             <p>The Original IQ Tester is a 5-base pyramid with 14 pins and 1 empty hole. You jump one peg over another into the empty space (the jumped peg is removed) and repeat until no legal moves remain. The goal is to finish with exactly one peg. The mechanics are simple; the puzzle is surprisingly hard. It’s deterministic, sequential, and reward-sparse—a good testbed for reinforcement learning.</p>
