added publication section and fixed minor layout issues for firefox browser

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#courses">Courses</a></li>
                 <li><a href="#experience">Experience</a></li>
+                <li><a href="#publications">Publications</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li>
                     <button type="button" class="theme-toggle" aria-label="Toggle dark mode" title="Toggle dark mode">
@@ -256,11 +257,30 @@
         </div>
     </section>
 
+    <!-- Publications Section -->
+    <section id="publications" class="publications">
+        <div class="container">
+            <h2 class="section-title">Publications</h2>
+            <p class="section-subtitle">Peer-reviewed research</p>
+            <div class="publications-list">
+                <a href="https://pubmed.ncbi.nlm.nih.gov/34404240/" target="_blank" rel="noopener noreferrer" class="publication-item">
+                    <div class="publication-content">
+                        <h3>Comparison of 5 Rectal Preparation Strategies for Prostate MRI and Impact on Image Quality</h3>
+                        <p class="publication-authors">Paul Sathiadoss, Mohammad Haroon, Heba Osman, Faraz Ahmad, Philip Papadatos, Nicola Schieda</p>
+                        <p class="publication-journal"><em>Canadian Association of Radiologists Journal</em> (2022), 73(2), 346–354.</p>
+                        <p class="publication-abstract">Compares five rectal preparation strategies for prostate MRI. Enema plus clear-fluids diet yielded the highest T2W and DWI image quality with the least artifact; IV antispasmodic reduced motion but did not improve image quality versus enema + clear-fluids diet.</p>
+                        <span class="publication-link">View on PubMed →</span>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </section>
+
     <!-- Contact Section -->
     <section id="contact" class="contact">
         <div class="container">
             <h2 class="section-title">Get In Touch</h2>
-            <p class="section-subtitle">I'm always open to discussing new opportunities</p>
+            <p class="section-subtitle">My door is always open, feel free to reach out!</p>
             <div class="contact-content contact-grid">
                 <a href="mailto:philippapadatos@cmail.carleton.ca" class="contact-card">
                     <span class="contact-icon" aria-hidden="true">
