--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
                             <span class="skill-tag">Python</span>
                             <span class="skill-tag">Java</span>
                             <span class="skill-tag">JavaScript</span>
+                            <span class="skill-tag">TypeScript</span>
                             <span class="skill-tag">React</span>
                             <span class="skill-tag">React Native</span>
                             <span class="skill-tag">Node.js</span>
@@ -114,8 +115,12 @@
                             <span class="skill-tag">LATEX</span>
                             <span class="skill-tag">PyTorch</span>
                             <span class="skill-tag">TensorFlow</span>
+                            <span class="skill-tag">NumPy</span>
+                            <span class="skill-tag">Vite</span>
+                            <span class="skill-tag">Expo</span>
+                            <span class="skill-tag">Tkinter</span>
+                            <span class="skill-tag">Canva</span>
                             <span class="skill-tag">QNX</span>
-
                         </div>
                     </div>
                     <div class="skills" style="margin-top: 2rem;">
@@ -151,6 +156,19 @@
                         <p style="margin-top: 0.5rem; font-size: 0.875rem; color: var(--text-secondary);"><strong>Tech:</strong> Python, NumPy, Q-Learning, Tkinter</p>
                     </div>
                 </a>
+                <a href="projects/sesa-student-housing.html" class="portfolio-item portfolio-link">
+                    <div class="portfolio-image">
+                        <img src="assets/images/project_secure_housing_profilepicv2.png" alt="SESA Student Housing project cover image">
+                    </div>
+                    <div class="portfolio-content">
+                        <h3>SESA Student Housing Hackathon</h3>
+                        <p>A unified React/TypeScript app solving student housing challenges with four integrated screens: property listings with landlord verification, roommate compatibility survey, housing connection and matching, and landlord profiles. Built during the SESA hackathon.</p>
+                        <div class="portfolio-links">
+                            <span class="link" style="color: var(--text-secondary);">Hackathon Project</span>
+                        </div>
+                        <p style="margin-top: 0.5rem; font-size: 0.875rem; color: var(--text-secondary);"><strong>Tech:</strong> TypeScript, React, CSS, Vite</p>
+                    </div>
+                </a>
                 <a href="projects/lets-train.html" class="portfolio-item portfolio-link">
                     <div class="portfolio-image">
                         <div class="image-placeholder">Let's Train</div>
@@ -179,7 +197,7 @@
                 </a>
                 <a href="projects/pokemon-party.html" class="portfolio-item portfolio-link">
                     <div class="portfolio-image">
-                        <div class="image-placeholder">Pokemon Party</div>
+                        <img src="assets/images/project_pokedle_profilepicv2.png" alt="Pokemon Party project cover image">
                     </div>
                     <div class="portfolio-content">
                         <h3>Pokemon Party Web Application</h3>
